# cad

./: .gitignore  BUILD_STEPS.generated.md  CMakeLists.txt  OpenDesign_Codex_SOP.md  OpenDesign_UI_Logic_Architectural_Scaffold.md  README.md  branch_map.yaml  fix registry  fix_nullptr.py  function_coverage.generated.yaml  function_coverage.yaml  ghidradecompile.txt  instructions.txt  ui_resource_map.yaml  update_function_coverage.py  update_function_coverage_v2.py
examples/: compile_check.cpp
opendesign/: CMakeLists.txt  test_advanced.cpp  test_analysis.cpp  test_core.cpp  test_geometry_demo.cpp  test_io_minimal.cpp  test_utilities.cpp
opendesign/cmake/: README.md
opendesign/docs/: decompiled_map.csv  design.exe.md  function_coverage.yaml  missing_functions.txt  missing_functions_categorized.csv  missing_functions_categorized.yaml  missing_functions_hotspots.md
opendesign/docs/ui_specs/: README.md
opendesign/scripts/analysis/: README.md  generate_missing_functions_categorized.py
opendesign/scripts/ci/: README.md
opendesign/scripts/gen_stubs/: README.md
opendesign/src/app/: AppDeps.cpp  AppDeps.h  AppLicense.cpp  AppLicense.h  AppSpecial.cpp  AppSpecial.h  Application.cpp  Application.h  Initialization.cpp  Initialization.h  main.cpp
opendesign/src/assets/: CriticalAssets.cpp  CriticalAssets.h
opendesign/src/branch_map/: BranchMapStubs.cpp  BranchMapStubs.cpp.backup  BranchMapStubs.h  BranchMapStubs_minimal.cpp  bulk_replace.py  bulk_replace.sh
opendesign/src/cad/: Advanced.cpp  Advanced.h  Analysis.cpp  Analysis.h  Collaboration.cpp  Collaboration.h  Core.cpp  Core.h  Document.cpp  Document.h  Documentation.cpp  Documentation.h  Extensions.cpp  Extensions.h  External.cpp  External.h  Geometry.cpp  Geometry.h  GeometryManager.h  GeometryTypes.h  IO.cpp  IO.h  Interface.cpp  Interface.h  Modeling.cpp  Modeling.h  Utilities.cpp  Utilities.h
opendesign/src/compat/mfc/: Dialogs.cpp  Dialogs.h  Ribbon.cpp  Ribbon.h  UpdateUI.cpp  UpdateUI.h
opendesign/src/compat/win/: Accel.cpp  Accel.h  Menu.cpp  Menu.h  Window.cpp  Window.h
opendesign/src/db/: Database.cpp  Database.h
opendesign/src/framework/: CommandBus.cpp  CommandBus.h  FeatureGate.cpp  FeatureGate.h  FunctionRegistry.cpp  FunctionRegistry.h
opendesign/src/io/: Settings.cpp  Settings.h
opendesign/src/plugins/: PluginManager.cpp  PluginManager.h
opendesign/src/render/: Rendering.cpp  Rendering.h  Viewport.cpp  Viewport.h
opendesign/src/ui/: UIButtonSpecial.cpp  UIButtonSpecial.h  UICommands.cpp  UICommands.h  UIComponents.cpp  UIComponents.h  UICore.cpp  UICore.h  UIDialogs.cpp  UIDialogs.h  UIFactories.cpp  UIFactories.h  UIInteraction.cpp  UIInteraction.h  UIStatus.cpp  UIStatus.h  UITextExt.cpp  UITextExt.h
opendesign/src/ui/grid/: Grid.cpp  Grid.h
opendesign/src/ui/html/: HtmlUI.cpp  HtmlUI.h
opendesign/src/ui/mainwindow/: MainWindow.cpp  MainWindow.h
opendesign/src/ui/printpreview/: PrintPreview.cpp  PrintPreview.h
opendesign/src/ui/ribbon/: RibbonBar.cpp  RibbonBar.h  RibbonCommands.cpp  RibbonCommands.h
opendesign/src/ui/statusbar/: StatusBar.cpp  StatusBar.h
opendesign/tests/: CMakeLists.txt
opendesign/tests/unit/: catch2.hpp  test_application.cpp  test_branch_map.cpp  test_collaboration.cpp  test_database.cpp  test_documentation.cpp  test_extensions.cpp  test_features.cpp  test_function_coverage.cpp  test_geometry_actual.cpp  test_initialization.cpp  test_io.cpp  test_ui_commands.cpp
